Updating content, added logo and font

--- a/index.html
+++ b/index.html
@@ -4,15 +4,29 @@
     <meta charset="utf-8">
     <title>Piers Mana</title>
     <style media="screen">
+      @font-face {
+        font-family: "Ash";
+        src: url("Ash.ttf") format("ttf");
+      }
+
       body {
         font-family: Roboto, Arial, sans-serif;
-        background: #ECEFF1;
+        background: #effeff;
         color: rgba(0,0,0,0.87);
         text-align: center;
       }
 
+      body > p {
+        font-size: 2em;
+      }
+
       a {
-        color: rgb(3,155,229);
+        color: #b33b33;
+      }
+
+      h1 {
+        font-family: Ash, sans-serif;
+        font-size: 6em;
       }
 
       section {
@@ -25,6 +39,7 @@
       }
 
       section h2 {
+        font-family: Ash, sans-serif;
         font-size: 22px;
         font-weight: 500;
         text-align: center;
@@ -32,50 +47,54 @@
       }
 
       section p {
-        font-weight: 300;
+        font-size: 1em;
         line-height: 150%;
       }
     </style>
+    <link rel="shortcut icon" href="pearz.png">
+    <link rel="apple-touch-icon" href="pearz.png">
   </head>
   <body>
     <h1>Aloha!</h1>
+    <img src="pearz.png" alt="Piers Mana's avatar, a emojified green pear" />
     <p>My name is Piers, and I'm working on a bunch of stuff:</p>
     <section>
-      <h2>Health</h2>
-      <p>I am growing a lifestyle for a healthy brain</p>
-      <p>The mission is to improve the world's mental health through accessible practices, resources, and support.</p>
-      <p>My goal is to become the happiest version of myself because I believe embodying joy radiates joy.</p>
+      <h2 style="color:green">Health</h2>
+      <p>I am writing "The O.N.E. Ways," a mixed-media book about transforming habits using assistive technology.</p>
+      <p>The mission is to improve my and, by extension, the world's mental health.</p>
+      <p>My goal is to develop a programmatic approach to personal growth because I believe every individual has individual needs that require continual discovery.</p>
     </section>
     <section>
-      <h2>Wealth</h2>
-      <p>I am working for <a href="hospitalitypulse.com">Hospitality Pulse</a>, a technology company based in Santa Cruz, CA</p>
-      <p>Our mission is to streamline hotel operations, in particular room assignment, to maximize value for the house and reduce negative guest experiences.</p>
-      <p>My goal is to develop a harmonious connection between users and AI because I believe systems should help people instead of getting in the way.</p>
+      <h2 style="color:red">Wealth</h2>
+      <p>I am fundraising for Aloha!, a wireless connectivity project based in Santa Cruz, CA</p>
+      <p>The mission is to create internet equity in our community.</p>
+      <p>My goal is to create a scalable network of devices serving free Wi-Fi because I believe access to online tools and information is a human right.</p>
     </section>
     <section>
-      <h2>Courage</h2>
-      <p>I am attending the <a href="polymer-project.org">Polymer Summit</a>, a Google conference in Copenhagen, Denmark</p>
-      <p>Their mission is to make life better for users and developers, by helping developers unlock the web platform’s full potential and by spurring the web platform to evolve and improve.</p>
-      <p>My goal is to familiarize myself with web components because I believe they are the future pattern of technology design.</p>
+      <h2 style="color:blue">Courage</h2>
+      <p>I am attended the <a href="polymer-project.org">Polymer Summit</a>, a Google conference in Copenhagen, Denmark</p>
+      <p>Their mission is to improve the internet experience for users and developers.</p>
+      <p>My goal is to accelerate adoption of web components because I believe they are the near and future patterns of technology design.</p>
     </section>
     <section>
-      <h2>Kindfulness</h2>
+      <h2 style="color:black">Kindfulness</h2>
       <p>I am volunteering at the <a href="homelessgardenproject.org">Homeless Garden Project</a>, a not-for-profit organization based in Santa Cruz, CA</p>
-      <p>Their mission is to provide job training and other tools to people who are working to end their homelessness.</p>
-      <p>My goal is to assist people in using technology for job seeking and job skills because I believe doing so helps me grow as a teacher and as a person.</p>
+      <p>Their mission is to provide job training and other tools to people transitioning from homelessness.</p>
+      <p>My goal is to assist people in using technology for job seeking and job skills because I believe everyone deserves economic opportunity.</p>
     </section>
     <section>
-      <h2>Input</h2>
+      <h2 style="color:purple">Input</h2>
       <p>I am reading a whitepaper for <a href="https://github.com/the-laughing-monkey/cicada-platform/blob/master/Cicada-WhitePaper-2016-10.13.GA.1.pdf">Cicada</a>, an open-source project on Github.</p>
       <p>Their mission is to end the cycle of power-driven violence and consolidation of leadership through Distributed Direct Democracy.</p>
-      <p>My goal is to understand the networking and security concepts used in their blockchain concept because I believe distributed computing needs to be mainstreamed.</p>
+      <p>My goal is to understand the networking and security concepts used in their blockchain concept because I believe distributed computing has high-impact opportunities yet to be discovered.</p>
     </section>
     <section>
-      <h2>Output</h2>
-      <p>I am developing a new website for the <a href="yogaforallmovement.org">Yoga For All Movement</a>, a not-for-profit organization based in Santa Cruz, CA</p>
-      <p>Their mission is to bring the practice of trauma-informed yoga to, well, ALL, first focusing on at-risk populations such as those in jail, prison, juvenile hall, and women's centers.</p>
+      <h2 style="color:gold">Output</h2>
+      <p>I am developing a website for the <a href="yogaforallmovement.org">Yoga For All Movement</a>, a not-for-profit organization based in Santa Cruz, CA</p>
+      <p>Their mission is to bring the practice of trauma-informed yoga to, well, ALL, focusing on at-risk populations such as those in jail, prison, juvenile hall, and women's centers.</p>
       <p>My goal is to help grow a volunteer base, receive funding from donors, and host resources for the community because I believe yoga heals.</p>
     </section>
     <p><a href="mailto:aloha@piersmana.com">aloha@piersmana.com</a></p>
+    <h1>Mahalo!</h1>
   </body>
 </html>
