Fixed font binding
Updated content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style media="screen">
       @font-face {
         font-family: "Ash";
-        src: url("Ash.ttf") format("ttf");
+        src: url("Ash.ttf") format("truetype");
       }
 
       body {
@@ -60,15 +60,15 @@
     <p>My name is Piers, and I'm working on a bunch of stuff:</p>
     <section>
       <h2 style="color:green">Health</h2>
-      <p>I am writing "The O.N.E. Ways," a mixed-media book about transforming habits using assistive technology.</p>
+      <p>I am writing "The O.N.E. Ways," an interactive book about transforming habits using assistive technology.</p>
       <p>The mission is to improve my and, by extension, the world's mental health.</p>
-      <p>My goal is to develop a programmatic approach to personal growth because I believe every individual has individual needs that require continual discovery.</p>
+      <p>My goal is to develop a programmatic approach to personal growth because I believe machines can help people in establishing new lifestyles.</p>
     </section>
     <section>
       <h2 style="color:red">Wealth</h2>
-      <p>I am fundraising for Aloha!, a wireless connectivity project based in Santa Cruz, CA</p>
+      <p>I am selling sponsorships for Aloha!, a wireless connectivity project based in Santa Cruz, CA</p>
       <p>The mission is to create internet equity in our community.</p>
-      <p>My goal is to create a scalable network of devices serving free Wi-Fi because I believe access to online tools and information is a human right.</p>
+      <p>My goal is to create a scalable network of devices serving secure, public Wi-Fi because I believe access to online tools and information is a human right.</p>
     </section>
     <section>
       <h2 style="color:blue">Courage</h2>
@@ -91,8 +91,8 @@
     <section>
       <h2 style="color:gold">Output</h2>
       <p>I am developing a website for the <a href="yogaforallmovement.org">Yoga For All Movement</a>, a not-for-profit organization based in Santa Cruz, CA</p>
-      <p>Their mission is to bring the practice of trauma-informed yoga to, well, ALL, focusing on at-risk populations such as those in jail, prison, juvenile hall, and women's centers.</p>
-      <p>My goal is to help grow a volunteer base, receive funding from donors, and host resources for the community because I believe yoga heals.</p>
+      <p>Their mission is to bring the practice of trauma-informed yoga to underserved and at-risk populations.</p>
+      <p>My goal is to help grow their impact because I believe yoga heals.</p>
     </section>
     <p><a href="mailto:aloha@piersmana.com">aloha@piersmana.com</a></p>
     <h1>Mahalo!</h1>
